added phone design

--- a/Ryan Stiles/index.html
+++ b/Ryan Stiles/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <title>Ryan Stiles</title>
     <link rel="stylesheet" type="text/css" href="style.css">
@@ -9,6 +10,7 @@
 <body>
 
 <section class="one">
+    <img src="imgone.jpg">
     <section class="circle"></section>
     <div class="text">
         <h2></h2>
@@ -18,6 +20,7 @@
 </section>
 
 <section class="two">
+    <img src="imgtwo.jpg">
     <section class="oval"></section>
     <div class="text">
         <h2></h2>
@@ -27,6 +30,7 @@
 </section>
 
 <section class="three">
+<img src="imgthree.jpg">
     <section class="star"></section>
     <div class="text">
         <h2></h2>
@@ -36,8 +40,10 @@
 </section>
 
 <section class="four">
+<img src="imgfour.jpg">
     <section class="diamond"></section>
     <div class="text">
+        
         <h2></h2>
         <i class="fa fa-cubes"></i>
         <p>"We're evil Smurfs, we're evil Smurfs, we're evil, evil evil Smurfs!"</p><p class="cite">--Ryan Stiles</p>
