fixed typos in content

--- a/Volleyball-How-to/hitting.html
+++ b/Volleyball-How-to/hitting.html
@@ -26,13 +26,13 @@
     </div>
     <section class="picture">
         <div class="info infoarm">
-            <p>A volleyball swing has many components. The wrist motions of the swing is arguably the most important part. The key to the motion is to snap the wrist around the ball. It sounds weird at first, but this snapping motion cause topspin which, when controled, is very powerful.</p>
+            <p>A volleyball swing has many components. The wrist motion of the swing is arguably the most important part. The key to the motion is to snap the wrist around the ball. It sounds weird at first, but this snapping motion cause topspin which, when controlled, is very powerful.</p>
         </div>        
         <div class="info infoshoulder">
-            <p>The shoulder in an arm swing controls the power of a shot. A faster should will hit the ball much harder. It is important to control this aspect of a swing. Too much power in the shoulder and a hitter will overshoot often.</p>
+            <p>The shoulder movement in an arm swing controls the power of the shot. A faster shoulder will hit the ball much harder. It is important to control this aspect of a swing. Too much power in the shoulder and a hitter will overshoot often.</p>
         </div>
         <div class="info infocore">
-            <p>The core aspect of a swing is very important and many hitters overlook it. A tight core when shitting adds power with a natural snapping motion. This is power that also adds topspin. Any player can improve their hits just by remebering to tighten their core.</p>
+            <p>The position of the core of your body during a swing is a key aspect of a swing which is very important and many hitters overlook it. A tight core when hitting adds power with a natural snapping motion. This is power that also adds topspin. Any player can improve their hits just by remembering to tighten their core.</p>
         </div>
 <!--         <div class="info arm">
         </div> -->
