--- a/Volleyball-How-to/index.html
+++ b/Volleyball-How-to/index.html
@@ -23,7 +23,7 @@
     <div class="rules">
         <h1>To get you started</h1>
         <h2>Rules</h2>
-        <p>The rules of volleyball are unique in that not many other sports follow the same general rule sets. In the very basics, each team gets their own side of the net on opposite sides of the net. Each team is allowed six people on the court. In play each team gets three contacts with the ball, then they must put it over the net. The other team then gets their three hits. This back and forth is called a volley.</p>
+        <p>The rules of volleyball are unique in that not many other sports follow the same general rule sets. In the very basics, each team gets their own side of the net on opposite sides of the net. Each team is allowed six people on the court. In play each team gets three contacts with the ball, the third contact must put it over the net. The other team then gets their three hits. This back and forth is called a volley.</p>
         <h2>The points</h2>
         <p>So I've told you about volleys, but what is the purpose of it? Well the answer is simple, first person to let the ball hit their side of the court or hit outside the oppenents court loses. Also if a team breaks one of the many contact rules they lose the point. When I says "loses" I'm refering to the current point. The team that wins the point gets one point and gets to serve the next point.</p>
         <h2>Serving</h2>
@@ -31,7 +31,7 @@
         <h2>Rotations</h2>
         <p>The concept of rotations is relativly simple, but the organization of teams can make seeing the players rotation difficult. It is called rotations because the players move in a circle through the positions. The player in the serving spot will move to the middle of the backrow and the player in the front right will move to the serving spot. Every player moves to a new spot in a rotation. These rotations happen when a team scores a point when they did not have the previous serve. It is a key part of the game because certain rotations are weaker than others for specific teams. This weakness depends on the players positions. </p>
         <h2>Positions</h2>
-        <p>In volleyball, like any other sport, each player has has a specific position. These positions for voleyball are outside, rightside, setter, libero, and middle. The outside position is an all around player, meaning they will both pass and hit. The rightside and middle positions are specifically for hitters. The libero is the complete oposite of this; they only pass. Then the setter is the setting specialist. </p>
+        <p>In volleyball, like any other sport, each player has a specific position. These positions for volleyball are outside, rightside, setter, libero, and middle. The outside position is an all around player, meaning they will both pass and hit. The rightside and middle positions are specifically for hitters. The libero is the complete opposite of this; they only pass. Then the setter is the setting specialist. </p>
     </div>
 </body>
 </html>
