--- a/Volleyball-How-to/setting.html
+++ b/Volleyball-How-to/setting.html
@@ -29,10 +29,10 @@
             <p>When setting a volleyball, it is important to focus on your hands positioning relative to each other. The key to this is to make a triangle with you thumbs and index fingers. This is your setting platform.</p>
         </div>        
         <div class="info infoshoulders">
-            <p>Setting is meant to be incredibly accurate. Doing this can be difficult so setters do anything possible to imporove consistancy and accuracy. One the things done is squaring their shoulders with their target.</p>
+            <p>Setting is meant to be incredibly accurate. Doing this can be difficult so setters do anything possible to improve consistency and accuracy. One the things done is squaring their shoulders with their target.</p>
         </div>
         <div class="info infoeyes">
-            <p>A setter uses their forhead and eyes to align their hands with the ball. This basically means they act like the ball will hit them in the forehead if they didnt put their hands up. This helps with accuracy.</p>
+            <p>A setter uses their forehead and eyes to align their hands with the ball. This basically means they act like the ball will hit them in the forehead if they didnt put their hands up. This helps with accuracy.</p>
         </div>
 
     </section>
