added list style
made style square

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-    <title>✽ ✽ ✽</title>
+    <title>My Page</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="/css/reset.css" media="all">
@@ -9,7 +9,7 @@
 </head>
 <body>
 	<h1>Welcome to my site! </h1>
-	<ul>
+	<ul class="happy">
 		<li><a href="Ryan Stiles/index.html">Ryan Stiles</a></li>
 		<li><a href="testchat/index.html">Test Chat</a></li>
 		<li><a href="Volleyball-How-to/index.html">Volleyball How-to</a></li>
