lots of stuff-club site
forgot to commit a lot

--- a/Volleyball-Club/index.html
+++ b/Volleyball-Club/index.html
@@ -5,9 +5,61 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="/css/reset.css" media="all">
+    <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/pure-min.css">
     <link rel="stylesheet" type="text/css" href="/css/screen.css" media="all">
 </head>
 <body>
-Hello
+	<div class="wrap">
+		<div class="header">
+			<h1>Batavia Boys Volleyball</h1>
+			<img src="volleyballpic.jpg">
+		</div>
+		<div class="pure-menu pure-menu-open pure-menu-horizontal nav">
+   			<ul>
+		        <li class="pure-menu-selected"><a href="#">Home</a></li>
+		        <li><a href="#">Roster</a></li>
+		        <li><a href="#">Sponser</a></li>
+		        <li><a href="#">Schedule</a></li>
+		        <li><a href="#">FAQ</a></li>
+		        <li><a href="#">Contact</a></li>
+		    </ul>
+		</div>
+		<!-- <div class="nav">
+			<a href="">Home</a>
+			<a href="">Roster</a>
+			<a href="">Sponsor</a>
+			<a href="">Schedule</a>
+			<a href="">FAQ</a>
+			<a href="">Contact</a>
+		</div> -->
+		<div class="title">
+			<h2>Club Forming Fall 2014 at BHS</h2>
+		</div>
+		<div class="pure-u-1-2 circles">
+			<div class="basics acircle">
+
+			</div>
+			<div class="hitting acircle">
+
+			</div>
+			<div class="setting acircle">
+
+			</div>
+			<div class="blocking acircle">
+
+			</div>
+			<div class="passing acircle">
+
+			</div>
+		</div>
+		<div class="pure-u-1-2 right-boxes">
+			<div class="sign-up">
+				<button class="pure-button">Sign Up</button>
+			</div>
+			<div class="slideshow">
+
+			</div>
+		</div>
+	</div>
 </body>
 </html>
