added club site to navigation page
(work in progress)

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 		<li><a href="Ryan Stiles/index.html">Ryan Stiles</a></li>
 		<li><a href="testchat/index.html">Test Chat</a></li>
 		<li><a href="Volleyball-How-to/index.html">Volleyball How-to</a></li>
+		<li><a href="Volleyball-Club/index.html">Club Site (work in progress)</a></li>
 	</ul>	
 </body>
 </html>
