--- a/Volleyball-Club/index.html
+++ b/Volleyball-Club/index.html
@@ -24,32 +24,30 @@
 		        <li><a href="#">Contact</a></li>
 		    </ul>
 		</div>
-		<!-- <div class="nav">
-			<a href="">Home</a>
-			<a href="">Roster</a>
-			<a href="">Sponsor</a>
-			<a href="">Schedule</a>
-			<a href="">FAQ</a>
-			<a href="">Contact</a>
-		</div> -->
 		<div class="title">
 			<h2>Club Forming Fall 2014 at BHS</h2>
 		</div>
+		<div class="pure-u-1-2 links">
+			<h3>Links</h3>
+		</div>
+		<div class="pure-u-1-2 blankspace">
+			
+		</div>
 		<div class="pure-u-1-2 circles">
 			<div class="basics acircle">
-
+				<a href="http://zsaegesser.github.io/Volleyball-How-to/index.html">Basics</a>
 			</div>
 			<div class="hitting acircle">
-
+				<a href="http://zsaegesser.github.io/Volleyball-How-to/hitting.html">Hitting</a>
 			</div>
 			<div class="setting acircle">
-
+				<a href="http://zsaegesser.github.io/Volleyball-How-to/setting.html">Setting</a>
 			</div>
 			<div class="blocking acircle">
-
+				<a href="#">Blocking</a>
 			</div>
 			<div class="passing acircle">
-
+				<a href="http://zsaegesser.github.io/Volleyball-How-to/passing.html">Passing</a>
 			</div>
 		</div>
 		<div class="pure-u-1-2 right-boxes">
