added sign-up skin
needs the javascript and to be linked to firebase

--- a/Volleyball-Club/index.html
+++ b/Volleyball-Club/index.html
@@ -52,7 +52,7 @@
 		</div>
 		<div class="pure-u-1-2 right-boxes">
 			<div class="sign-up">
-				<button class="pure-button">Sign Up</button>
+				<button class="pure-button"><a href="sign-up.html">Sign Up</a></button>
 			</div>
 			<div class="slideshow">
 
