--- a/Volleyball-Club/sign-up.html
+++ b/Volleyball-Club/sign-up.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" type="text/css" href="/css/reset.css" media="all">
     <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/pure-min.css">
     <link rel="stylesheet" type="text/css" href="css/screen.css" media="all">
+    <script src="//code.jquery.com/jquery-2.1.0.min.js"></script>
+    <script src="https://cdn.firebase.com/js/client/1.0.18/firebase.js"></script>
+    <script src='https://cdn.firebase.com/js/client/1.0.17/firebase.js'></script>
 </head>
 <body class="sign">
 	<div class="wrap">
@@ -33,47 +36,104 @@
 		<div class="pure-u-1-2 blankspace">
 			
 		</div>
-		<form class="pure-form pure-form-stacked">
+		<!-- <form class="pure-form pure-form-stacked" action="#" id="great-form" method="get">
     		<fieldset>
         		<legend>Legend</legend>
 
 		        <div class="pure-g">
 		            <div class="pure-u-1 pure-u-md-1-3">
-		                <label for="first-name">First Name</label>
-		                <input id="first-name" type="text">
+		                <label>First Name
+		                <input id="first-field" name="first" type="text">
+		                </label>
 		            </div>
 
 		            <div class="pure-u-1 pure-u-md-1-3">
-		                <label for="last-name">Last Name</label>
-		                <input id="last-name" type="text">
+		                <label>Last Name
+		                <input id="last-field" name="last" type="text">
+		                </label>
 		            </div>
 
 		            <div class="pure-u-1 pure-u-md-1-3">
-		                <label for="email">E-Mail</label>
-		                <input id="email" type="email" required>
-		            </div>
-
-		            <div class="pure-u-1 pure-u-md-1-3">
-		                <!-- <label for="city">City</label>
-		                <input id="city" type="text"> -->
-		            </div>
-
-		            <div class="pure-u-1 pure-u-md-1-3">
-		                <!-- <label for="state">State</label>
-		                <select id="state" class="pure-input-1-2">
-		                    <option>AL</option>
-		                    <option>CA</option>
-		                    <option>IL</option>
-		                </select> -->
+		                <label>E-Mail
+		                <input id="email" name="email" type="email" required>
+		                </label>
 		            </div>
 		        </div>
 
-        <!-- <label for="terms" class="pure-checkbox">
-            <input id="terms" type="checkbox"> I've read the terms and conditions
-        </label> -->
+	        	<button type="submit" class="pure-button pure-button-primary">Submit</button>
+	   		</fieldset>
+		</form> -->
+		<form class="pure-form pure-form-stacked" id="some-great-form" action="#" method="get">
+			<div class="pure-g">
+				<div class="pure-u-1 pure-u-md-1-3">
+					<label>
+						<input type="text" name="name" id="name-field" placeholder="Full Name">
+					</label>
+				</div>
+				<div class="pure-u-1 pure-u-md-1-3">
+					<label>
+						<input type="email" name="email" id="email-field" placeholder="Email">
+					</label>
+				</div>
+				<button class="pure-button pure-button-primary" type="submit">Submit</button>
+			</div>
+		</form>
+	</div>
+	<script>
+	$(function() {
+    // This should reference your own app. "ajax-test" is what I called mine.
+    var myRootRef = new Firebase('https://clubinfo.firebaseio.com/');
 
-        <button type="submit" class="pure-button pure-button-primary">Submit</button>
-    </fieldset>
-</form>
+    $('#some-great-form').submit(function (evt) {
+        // This prevents the form from subimtting like normal and rereshing the page.
+//         evt.preventDefault();
+
+        // This creates a new node in my Firebase DB with the data that's in the form.
+        myRootRef.push({
+          name: $("#name-field").val(),
+          email:  $("#email-field").val()
+        });
+
+        // This posts the data from the form on the TSLJS.herokuapp.com site.
+        $.ajax({
+            type: "POST",
+            url: "http://tsljs.herokuapp.com/zach",
+            data: {
+                name: $("#name-field").val(),
+                email: $("#email-field").val()
+            }
+        });
+    });
+});
+// 	$(function() {
+//     // This should reference your own app.	
+//     var myRootRef = new Firebase('https://clubinfo.firebaseio.com/');
+
+//     $('#great-form').submit(function (evt) {
+
+//     	evt.preventDefault();
+//         // This prevents the form from subimtting like normal and rereshing the page.
+        
+
+//         // This creates a new node in my Firebase DB with the data that's in the form.
+//         myRootRef.push({
+//           first: $("#first-field").val(),
+//           last:  $("#last-field").val(),
+//           email:  $("#email").val()
+//         });
+
+//         // This posts the data from the form on the TSLJS.herokuapp.com site.
+//         $.ajax({
+//             type: "POST",
+//             url: "http://tsljs.herokuapp.com/zach"
+//             data: {
+//                 first: $("#first-field").val(),
+//                 last: $("#last-field").val(),
+//                 email: $("#email").val()
+//             }
+//         });
+//     });
+// });
+	</script>
 </body>
 </html>
