--- a/Volleyball-Club/sign-up.html
+++ b/Volleyball-Club/sign-up.html
@@ -65,17 +65,17 @@
 		</form> -->
 		<form class="pure-form pure-form-stacked" id="some-great-form" action="#" method="get">
 			<div class="pure-g">
-				<div class="pure-u-1 pure-u-md-1-3">
+				<div class="pure-u-1 pure-u-md-1-3 inputs">
 					<label>
 						<input type="text" name="name" id="name-field" placeholder="Full Name">
 					</label>
 				</div>
-				<div class="pure-u-1 pure-u-md-1-3">
+				<div class="pure-u-1 pure-u-md-1-3 inputs">
 					<label>
 						<input type="email" name="email" id="email-field" placeholder="Email">
 					</label>
 				</div>
-				<button class="pure-button pure-button-primary" type="submit">Submit</button>
+				<button class="pure-button pure-button-primary" type="submit"><a href="#">Submit</a></button>
 			</div>
 		</form>
 	</div>
