--- a/Volleyball-Club/sign-up.html
+++ b/Volleyball-Club/sign-up.html
@@ -19,22 +19,22 @@
 		</div>
 		<div class="pure-menu pure-menu-open pure-menu-horizontal nav">
    			<ul>
-		        <li class="pure-menu-selected"><a href="#">Home</a></li>
+		        <li><a href="/index.html">Home</a></li>
 		        <li><a href="#">Roster</a></li>
 		        <li><a href="#">Sponser</a></li>
 		        <li><a href="#">Schedule</a></li>
 		        <li><a href="#">FAQ</a></li>
-		        <li><a href="#">Contact</a></li>
+		        <li class="pure-menu-selected"><a href="#">Contact</a></li>
 		    </ul>
 		</div>
 		<div class="title">
 			<h2>Club Forming Fall 2014 at BHS</h2>
 		</div>
 		<div class="pure-u-1-2 links">
-			<h3>Sign-Up</h3>
+			<!-- <h3>Sign-Up</h3> -->
 		</div>
 		<div class="pure-u-1-2 blankspace">
-			
+			<h3>Thank you for your submission!</h3>
 		</div>
 		<!-- <form class="pure-form pure-form-stacked" action="#" id="great-form" method="get">
     		<fieldset>
@@ -63,7 +63,8 @@
 	        	<button type="submit" class="pure-button pure-button-primary">Submit</button>
 	   		</fieldset>
 		</form> -->
-		<form class="pure-form pure-form-stacked" id="some-great-form" action="#" method="get">
+		<iframe src="https://docs.google.com/forms/d/1M_7ky_HIK6i8SeDgawGy60oGvnrjjQOdW-kRvYCLQew/viewform?embedded=true" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+		<!-- <form class="pure-form pure-form-stacked" id="some-great-form" action="#" method="get">
 			<div class="pure-g">
 				<div class="pure-u-1 pure-u-md-1-3 inputs">
 					<label>
@@ -78,7 +79,7 @@
 				<button class="pure-button pure-button-primary" type="submit"><a href="#">Submit</a></button>
 			</div>
 		</form>
-	</div>
+	</div> -->
 	<script>
 	$(function() {
     // This should reference your own app. "ajax-test" is what I called mine.
@@ -86,7 +87,7 @@
 
     $('#some-great-form').submit(function (evt) {
         // This prevents the form from subimtting like normal and rereshing the page.
-//         evt.preventDefault();
+        //evt.preventDefault();
 
         // This creates a new node in my Firebase DB with the data that's in the form.
         myRootRef.push({
@@ -105,35 +106,7 @@
         });
     });
 });
-// 	$(function() {
-//     // This should reference your own app.	
-//     var myRootRef = new Firebase('https://clubinfo.firebaseio.com/');
 
-//     $('#great-form').submit(function (evt) {
-
-//     	evt.preventDefault();
-//         // This prevents the form from subimtting like normal and rereshing the page.
-        
-
-//         // This creates a new node in my Firebase DB with the data that's in the form.
-//         myRootRef.push({
-//           first: $("#first-field").val(),
-//           last:  $("#last-field").val(),
-//           email:  $("#email").val()
-//         });
-
-//         // This posts the data from the form on the TSLJS.herokuapp.com site.
-//         $.ajax({
-//             type: "POST",
-//             url: "http://tsljs.herokuapp.com/zach"
-//             data: {
-//                 first: $("#first-field").val(),
-//                 last: $("#last-field").val(),
-//                 email: $("#email").val()
-//             }
-//         });
-//     });
-// });
 	</script>
 </body>
 </html>
