added roster and changed circle gradients

--- a/Volleyball-Club/index.html
+++ b/Volleyball-Club/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/pure-min.css">
     <link rel="stylesheet" type="text/css" href="css/screen.css" media="all">
 </head>
-<body>
+<body class="home">
 	<div class="wrap">
 		<div class="header">
 			<h1>Batavia Boys Volleyball</h1>
@@ -17,11 +17,11 @@
 		<div class="pure-menu pure-menu-open pure-menu-horizontal nav">
    			<ul>
 		        <li class="pure-menu-selected"><a href="#">Home</a></li>
-		        <li><a href="#">Roster</a></li>
+		        <li><a href="/roster.html">Roster</a></li>
 		        <li><a href="#">Sponser</a></li>
 		        <li><a href="#">Schedule</a></li>
 		        <li><a href="#">FAQ</a></li>
-		        <li><a href="#">Contact</a></li>
+		        <li><a href="/sign-up.html">Sign-Up</a></li>
 		    </ul>
 		</div>
 		<div class="title">
