--- a/Volleyball-Club/sign-up.html
+++ b/Volleyball-Club/sign-up.html
@@ -20,7 +20,7 @@
 		<div class="pure-menu pure-menu-open pure-menu-horizontal nav">
    			<ul>
 		        <li><a href="/index.html">Home</a></li>
-		        <li><a href="#">Roster</a></li>
+		        <li><a href="/roster.html">Roster</a></li>
 		        <li><a href="#">Sponser</a></li>
 		        <li><a href="#">Schedule</a></li>
 		        <li><a href="#">FAQ</a></li>
