--- a/Alison/punny.html
+++ b/Alison/punny.html
@@ -12,11 +12,15 @@
 	<div class="pure-u-1-1 title"><a href="/index.html">Alison</a></div>
 
 	<div class="pure-menu pure-menu-open pure-menu-horizontal nav">
-		<li class="pure-u-1-2 topbar"><a href="/punny.html">Punny</a></li>
-		<li class="pure-u-1-2 topbar"><a href="/serious.html">Serious</a></li>
+		<li class="pure-u-1-2 pure-menu-selected topbar"><a href="#">Punny</a></li>
+		<li class="pure-u-1-2 topbar"><a href="serious.html">Serious</a></li>
 	</div>
-	<div class="pure-u-1-1 welcome">
-		<h1>Welcome Sloggan</h1>
+	<div class="pure-u-1-1 puns">
+		<h2>PUN MAGIC 1</h2>
+		<h2>PUN MAGIC 2</h2>
+		<h2>PUN MAGIC 3</h2>
+		<h2>PUN MAGIC 4</h2>
+		<h2>PUN MAGIC 5</h2>
 	</div>
 </body>
 </html>
