--- a/Alison/serious.html
+++ b/Alison/serious.html
@@ -13,10 +13,19 @@
 
 	<div class="pure-menu pure-menu-open pure-menu-horizontal nav">
 		<li class="pure-u-1-2 topbar"><a href="/punny.html">Punny</a></li>
-		<li class="pure-u-1-2 topbar"><a href="/serious.html">Serious</a></li>
+		<li class="pure-u-1-2 pure-menu-selected topbar"><a href="#">Serious</a></li>
 	</div>
-	<div class="pure-u-1-1 welcome">
-		<h1>Welcome Sloggan</h1>
+	<div class="pure-u-1-1 quotes">
+		<div>Pic</div>
+		<h2>MAGIC 1</h2>
+		<div>pic</div>
+		<h2>MAGIC 2</h2>
+		<div>pic</div>
+		<h2>MAGIC 3</h2>
+		<div>pic</div>
+		<h2>MAGIC 4</h2>
+		<div>pic</div>
+		<h2>MAGIC 5</h2>
 	</div>
 </body>
 </html>
