--- a/Alison/index.html
+++ b/Alison/index.html
@@ -5,15 +5,15 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="/css/reset.css" media="all">
-    <link rel="stylesheet" type="text/css" href="/css/screen.css" media="all">
+    <link rel="stylesheet" type="text/css" href="css/screen.css" media="all">
     <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/pure-min.css">
 </head>
 <body class="wrap">
 	<div class="pure-u-1-1 title"><a href="/index.html">Alison</a></div>
 
 	<div class="pure-menu pure-menu-open pure-menu-horizontal nav">
-		<li class="pure-u-1-2 topbar"><a href="/punny.html">Punny</a></li>
-		<li class="pure-u-1-2 topbar"><a href="/serious.html">Serious</a></li>
+		<li class="pure-u-1-2 topbar"><a href="punny.html">Punny</a></li>
+		<li class="pure-u-1-2 topbar"><a href="serious.html">Serious</a></li>
 	</div>
 	<div class="pure-u-1-1 welcome">
 		<h1>Welcome Sloggan</h1>
