prom picture integration

--- a/Alison/serious.html
+++ b/Alison/serious.html
@@ -12,20 +12,22 @@
 	<div class="pure-u-1-1 title"><a href="/index.html">Alison</a></div>
 
 	<div class="pure-menu pure-menu-open pure-menu-horizontal nav">
-		<li class="pure-u-1-2 topbar"><a href="/punny.html">Punny</a></li>
+		<li class="pure-u-1-2 topbar"><a href="punny.html">Punny</a></li>
 		<li class="pure-u-1-2 pure-menu-selected topbar"><a href="#">Serious</a></li>
 	</div>
 	<div class="pure-u-1-1 quotes">
-		<div>Pic</div>
-		<h2>MAGIC 1</h2>
-		<div>pic</div>
-		<h2>MAGIC 2</h2>
-		<div>pic</div>
-		<h2>MAGIC 3</h2>
-		<div>pic</div>
-		<h2>MAGIC 4</h2>
-		<div>pic</div>
-		<h2>MAGIC 5</h2>
+		<div class="pure-u-1-3">
+			<img class="photo" src="promlaugh2015.jpg">
+		</div>
+		<h2 class="pure-u-1-2">MAGIC 1</h2>
+		<div class="pure-u-1-3">pic</div>
+		<h2 class="pure-u-1-2">MAGIC 2</h2>
+		<div class="pure-u-1-3">pic</div>
+		<h2 class="pure-u-1-2">MAGIC 3</h2>
+		<div class="pure-u-1-3">pic</div>
+		<h2 class="pure-u-1-2">MAGIC 4</h2>
+		<div class="pure-u-1-3">pic</div>
+		<h2 class="pure-u-1-2">MAGIC 5</h2>
 	</div>
 </body>
 </html>
