should have pushed a long time ago
lots

--- a/Alison/index.html
+++ b/Alison/index.html
@@ -16,7 +16,15 @@
 		<li class="pure-u-1-2 topbar"><a href="serious.html">Serious</a></li>
 	</div>
 	<div class="pure-u-1-1 welcome">
-		<h1>Welcome Sloggan</h1>
+		
+			<img class="pic1 pure-u-1-2" src="alison-window.jpg">
+		
+		<div class="pure-u-1-2">
+			<img class="pic3 pure-u-1-2" src="nonbw-alison-smile.jpg">
+			<img class="pic4 pure-u-1-2" src="bw-alison-edgeleaning.jpg">
+			<img class="pic2 pure-u-1-1" src="mask.jpg">
+		</div>
+		
 	</div>
 </body>
 </html>
