--- a/Alison/serious.html
+++ b/Alison/serious.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-    <title>✽ ✽ ✽</title>
+    <title>Hawkwar Alison</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="/css/reset.css" media="all">
@@ -24,10 +24,6 @@
 		<h2 class="pure-u-1-2">"Prepare for trouble... Make it double" -Maddy</h2>
 		<div class="pure-u-1-3"><img class="photo" src="kelley.jpg"></div>
 		<h2 class="pure-u-1-2 kelley">"Alison, you are my person. As we get older, all that we would dream about when we were little is actually becoming reality. You graduated high school and are going off to college! I have the highest hopes for you out in Iowa, and I know that anything you put your mind to you will achieve. I'll miss you like hell, but I have no doubt that us two will stay best friends until the very end. Good luck, and Skype often!" -Kelley</h2>
-		<div class="pure-u-1-3">pic</div>
-		<h2 class="pure-u-1-2">MAGIC 4</h2>
-		<div class="pure-u-1-3">pic</div>
-		<h2 class="pure-u-1-2">MAGIC 5</h2>
 	</div>
 </body>
 </html>
