--- a/Alison/punny.html
+++ b/Alison/punny.html
@@ -16,11 +16,17 @@
 		<li class="pure-u-1-2 topbar"><a href="serious.html">Serious</a></li>
 	</div>
 	<div class="pure-u-1-1 puns">
-		<h2>PUN MAGIC 1</h2>
-		<h2>PUN MAGIC 2</h2>
-		<h2>PUN MAGIC 3</h2>
-		<h2>PUN MAGIC 4</h2>
-		<h2>PUN MAGIC 5</h2>
+		<h2>Wanna hear a bird joke? Well that's hawkward I don't have one.</h2>
+		<h2>You lucky duck ;)  (my favorite)</h2>
+	</div>
+	<div class="pure-u-1-2">
+		<img src="otter.jpg">
+	</div>
+	<div class="pure-u-1-2">
+		<img src="spaceparty.jpg">
+	</div>
+	<div class="pure-u-1-2">
+		<img src="eagle.jpg">
 	</div>
 </body>
 </html>
