--- a/Alison/serious.html
+++ b/Alison/serious.html
@@ -19,7 +19,7 @@
 		<div class="pure-u-1-3">
 			<img class="photo" src="promlaugh2015.jpg">
 		</div>
-		<h2 class="pure-u-1-2">me</h2>
+		<h2 class="pure-u-1-2">"Still obsessed with frozen ;)" -ME</h2>
 		<div class="pure-u-1-3"><img class="photo" src="maddy.jpg"></div>
 		<h2 class="pure-u-1-2">"Prepare for trouble... Make it double" -Maddy</h2>
 		<div class="pure-u-1-3"><img class="photo" src="kelley.jpg"></div>
