--- a/Alison/punny.html
+++ b/Alison/punny.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/pure-min.css">
 </head>
 <body class="wrap">
-	<div class="pure-u-1-1 title"><a href="/index.html">Alison</a></div>
+	<div class="pure-u-1-1 title"><a href="index.html">Alison</a></div>
 
 	<div class="pure-menu pure-menu-open pure-menu-horizontal nav">
 		<li class="pure-u-1-2 pure-menu-selected topbar"><a href="#">Punny</a></li>
