--- a/Alison/serious.html
+++ b/Alison/serious.html
@@ -25,7 +25,7 @@
 		<div class="pure-u-1-3"><img class="photo" src="jake.jpg"></div>
 		<h2 class="pure-u-1-2">Bitches ain't shit. -Jake</h2>
 		<div class="pure-u-1-3"><img class="photo" src="promlaugh2015.jpg"></div>
-		<h2 class="pure-u-1-2">"Still obsessed with frozen ;)" -ME</h2>
+		<h2 class="pure-u-1-2">"I Love you! To the Moon and Back" -ME</h2>
 		<div class="pure-u-1-3"><img class="photo" src="kelley.jpg"></div>
 		<h2 class="pure-u-1-2 kelley">"Alison, you are my person. As we get older, all that we would dream about when we were little is actually becoming reality. You graduated high school and are going off to college! I have the highest hopes for you out in Iowa, and I know that anything you put your mind to you will achieve. I'll miss you like hell, but I have no doubt that us two will stay best friends until the very end. Good luck, and Skype often!" -Kelley</h2>
 	</div>
